layout.css
body {
    font-family: Lucida Console; monospace;    
    font-size: 12px;
}

div {
    padding-bottom: 15px;
}

.row {
    width: 1500px;
    float: left;
    overflow: auto;
    white-space: nowrap;
}

.side {
	display: inline-block;
    float: left;
	padding: 0 15px 30px 0;
}

#warnings {
    color: red;
}

table {
	border-width: 0 0 1px 1px;
	border-spacing: 0;
	border-style: solid;
	border-collapse: collapse;
}

td {
	border-width: 1px 1px 0 0;
	border-style: solid;
	margin: 0;
	padding: 3px;
}

ul {
    margin-top: 0;
    padding-left: 15px;
    margin-left: 0;
}

ul li ul li {
    color: red;
}

ul li ul li ul li {
    color: blue;
}

ul li ul li ul li ul li {
    color: black;
}

